--- a/src/index.pug
+++ b/src/index.pug
@@ -10,6 +10,204 @@ html(lang="en")
   body
     .wrapper
       .maincontent
-        +image('content/user.jpg', 'user-pic')
-        +icon('link', 'link-class')
-        .icon-bg
+        .welcome-section
+          section.hero
+            .container.hero__container
+              header.header.hero__header
+                .header__logo
+                  a(href="").logo HA
+                .header__menu
+                  nav.menu
+                    ul.menu__list
+                      - var menu = ['Главная' , 'Обо мне' , 'Навыки' , 'Работы' , 'Отзывы' , 'Связаться'];
+                      each item in menu
+                        li.menu__item
+                          a(href="").menu__link #{item}
+                .header__buttons
+                  ul.socials
+                    - var socials = ['insta' , 'vk' , 'github'];
+                    each item in socials 
+                      li.socials__item
+                        a(href="").socials__link 
+                          +icon(`${item}`, 'socials__icon')
+              .hero__content
+                .userinfo
+                  .userinfo__title Личный сайт веб разработчика
+                  .userinfo__name Андрей Новиков
+              .hero__downbutton
+                .scroll-down__btn
+          
+          section.about 
+            .container
+              .about__columns
+                .about__user
+                  .user
+                    .user__avatar
+                      .user__avatar-wrapper
+                        +image("content/user.jpg", "user__avatar-pic")
+                      .user__about
+                        -
+                          var data = [
+                            ['Проживаю', 'Москва'],
+                            ['Возраст', '26'],
+                            ['Родился', '12.09.1993'],
+                          ];
+                        table.user__table
+                          each row in data
+                            tr
+                              td.user___table-title #{row[0]}
+                              td.user___table-content #{row[1]}
+                  .about__user-text
+                    .about__main-text-content
+                      h4.about__desc Привет, меня зовут
+                      h2.about__title Новиков Андрей
+                      .about__text-info
+                        p Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
+                    .about__ps
+                      p Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
+
+        section.values
+          .container.values__container
+            .values__wrapper
+              .values__title
+                .values__title-container
+                  h3.values__title-text.section-title Чем я могу быть полезен
+                  .values__content
+                    p Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
+              .values__widget
+                .values__widget-container
+                  ul.skills
+                    - for (var i = 0; i < 2; i++)
+                      li.skills__item.skills-row
+                        - var skillRow = ["Front-end", "WorkFlow"]
+                          h4.skills-row__title #{skillRow[i]} 
+                          ul.skills-row__list
+                            - for (var j = 0; j < 4; j++)
+                              - var skillTitle = ["HTML5", "CSS3", "JavaScript", "Vue"]
+                              - var skillTitle2 = ["GIT", "Terminal", "Gulp", "Webpack"]
+                                li.skills-row__item 
+                                  .skill
+                                    svg(viewBox="0 0 100 100" preserveAspectRatio="none").skill__circle-shape
+                                      circle(r="40" cx="50" cy="50").skill__circle.skill__circle--under
+                                      circle(r="40" cx="50" cy="50" stroke="url(#gradient" transform="rotate(180 50 50)").skill__circle.skill__circle--above
+                                      linear-gradient(id="gradient" x1="0%" y1="0%" x2="100%" y2="0")
+                                        stop(offset="0%" stop-color="#5500f2")
+                                        stop(offset="100%" stop-color="#8f00ef")
+                                    .skill__title #{skillTitle[j]}
+        section.works
+          .container.works__container
+            h2.section-title.works__section-title Мои работы
+            .works__content
+              .works__left
+                .slider
+                  .slider__fillpic
+                    +image("content/work_boss.png", "slider__avatar-pic")
+                    +image("content/work_2.png", "slider__preview-pic")
+                  .slider__preview
+                    ul.previews
+                      - for (var i = 0; i < 3; i++)
+                        li.previews__item
+                          img.previews__pic
+                  .slider__buttons
+                    .slider-button
+                      button.slider-buttons__item.slider-buttons__item--slide--prev <
+                      button.slider-buttons__item.slider-buttons__item--slide--next.active >
+
+              .works__right
+                .works__tags
+                  - var tags = ['html', 'css', 'javascript']
+                  each tag in tags
+                    ul.tags
+                      li.tags__item #{tag}
+                .works__text
+                  h3.works__title Сайт школы образования
+                  .works__desc-text
+                    p Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
+                  a(href="").iconed-link
+                    .iconed-link__icon
+                      +icon('link', 'iconed-link-icon')
+                    .iconed-link__text Посмотреть сайт
+
+        section.contacts
+            .container.contacts__container
+              .contacts__about
+                .reviews
+                  .reviews__header
+                    .reviews__title.section-title Что обо мне говорят ?
+                    .reviews__buttons 
+                      .reviews__btn
+                        .reviews__btn_prev
+                        .reviews__btn_next
+                  .reviews__content
+                    ul.reviews__content-item
+                        li.reviews__content-item-text
+                          p Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 4,5 месяца только самых тяжелых испытаний и бессонных ночей!
+                          a(href="#").reviews__social.teacher-social
+                            .teacher-social-pic
+                              +image("content/Kovalchuk.png", "teacher-social-icon")
+                            .teacher-social-content
+                              h4.teacher-social-title Ковальчук Дмитрий
+                              p Основатель Loftschool
+                        li.reviews__content-item-text
+                          p Этот код выдержит любые испытания. Только пожалуйста, не загружайте сайт на слишком старых браузерах. 
+                          a(href="#").reviews__social.teacher-social
+                            .teacher-social-pic
+                              +image("content/Sibancev.png", "teacher-social-icon")
+                            .teacher-social-content
+                              h4.teacher-social-title Владимир Сабанцев
+                              p Преподаватель
+                .form
+                  .section-title.contacts__form-title Связаться со мной
+                  form.form__elem
+                    .form__row
+                      - 
+                        var fields = [
+                          ['user', 'Введите ваше имя', 'Ковальчук Дмитрий'],
+                          ['envelope', 'Введите ваш email', 'loftschool@study.com'],
+                        ]
+                      each item in fields
+                        label.form-block(data-title=item[1])
+                          .form-block__container
+                            +icon(`${item[0]}`, 'form-block__icon') 
+                            .form-block__field
+                              input(type="text" placeholder=item[2]).form-block__input
+                    .form__row.form__row--extra-margin
+                      label.form-block(data-title="Сообщение к письму")
+                        .form-block__container.form-block__container_align_top
+                          +icon('message', 'form-block__icon') 
+                          .form-block__field
+                            textarea(
+                              placeholder="Требуется ваша помощь в создании сайта. Интересуют сроки и цена вопроса"
+                            ).form-block__input
+                    .from__row
+                      input(type="submit" value="отправить").gradient-btn.form__submit
+
+      footer.footer
+        .container.footer__container
+          .footer__copyright
+            .footer__copyright-col
+              .footer__copyright-year &copy; 2020
+            .footer__copyright-userinfo
+              .footer__copyright-name Новиков Андрей
+              .footer__data-text Личный сайт веб - разработчика
+          .footer__data
+            nav.menu.menu--color-white.footer__data-menu
+              ul.menu__list
+                each item in menu 
+                  li.menu__item
+                    a(href="#").menu__link #{item}
+            .footer__data-content
+              .footer__data-col
+                .footer__data-text
+                  p Этот сайт я сделал в рамках обучения в Школе онлайн образования Loftschool
+                .footer__data-socials
+                  ul.socials.socials--round-borders
+                    each item in socials
+                      li.socials__item
+                        a(href="#").socials__link
+                          +icon(`${item}`, 'socials__icon')
+              .footer__data-col
+                .text-quote
+                  .text-quote__text
+                    p Всегда пишите код так, будто сопровождать его будет склонный к насилию психопат, который знает где вы живете 
+                  .text-quote__author Martin Golding                          
