--- a/src/styles/blocks/header.pcss
+++ b/src/styles/blocks/header.pcss
@@ -20,4 +20,12 @@
     @include phones {
       display: none;
     }
+
+    @include tablets {
+        margin-left: auto;
+      }
+}
+
+.header__burgerMenu {
+    margin-left: 90px;
 }
