--- a/src/styles/blocks/about.pcss
+++ b/src/styles/blocks/about.pcss
@@ -7,9 +7,10 @@
   padding: 169px 19% 268px;
   justify-content: space-between;
   @include desktop {
-    padding-right: 2%;
-    padding-left: 2%;
+    padding-right: 5%;
+    padding-left: 5%;
   }
+
   @include phones {
     flex-direction: column;
     padding-top: 114px;
@@ -23,16 +24,22 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  
   @include phones {
+    margin: 50px 0 0 0 ;
     width: 100%;
   }
 }
 
 .about__user {
       display: flex;
-  @include phones {
-    width: 100%;
-    margin-bottom: 50px;
+  
+    @include phones {
+      display: flex;
+      flex-direction: column;
+      // align-items: center;
+      width: 100%;
+      margin-bottom: 50px;
   }
 }
 
@@ -52,6 +59,10 @@
   position: relative;
   font-style: italic;
   margin-bottom: 36px;
+
+  @include phones {
+    margin-top: 30px;
+  }
 
   &:before {
     content: "*";
