--- a/src/styles/blocks/contacts.pcss
+++ b/src/styles/blocks/contacts.pcss
@@ -15,6 +15,10 @@
     @include phones {
       text-align: center;
     }
+
+    @include tablets {
+      text-align: center;
+    }
   }
   
   .contacts__about {
