--- a/src/styles/blocks/footer.pcss
+++ b/src/styles/blocks/footer.pcss
@@ -3,14 +3,20 @@
     padding: 88px 0;
     color: rgba(#fff, .3);
     line-height: 1.7;
+
     @include tablets {
       padding: 50px 0;
+    }
+
+    @include tablets {
+      padding: 50px;
     }
   }
   
   .footer__container {
     display: flex;
     justify-content: space-between;
+    
     @include phones {
       flex-direction: column;
     }
