--- a/src/styles/blocks/reviews.pcss
+++ b/src/styles/blocks/reviews.pcss
@@ -120,9 +120,27 @@
             top: 0;
             left: 0;
             // transform: translate(-50%, -50%) rotate(-180deg);
+
+            @include tablets {
+              width: 40px;
+              height: 40px;
+            }
+
+            @include phones {
+              width: 20px;
+              height: 20px;
+            }
         }
         &:last-child {
             margin-right: 0;
+        }
+
+        @include tablets {
+          padding-left: 46px;
+        }
+
+        @include phones {
+          padding-left: 20px;
         }
     }
 }
@@ -130,4 +148,8 @@
 .reviews__social {
     margin-top: 25px;
     display: flex;
+
+    @include phones {
+      width: max-content;
+    }
 }
