--- a/src/styles/blocks/skills_row.pcss
+++ b/src/styles/blocks/skills_row.pcss
@@ -8,9 +8,15 @@
     display: flex;
     flex-wrap: wrap;
     margin-left: -4%;
+
     @include phones {
       justify-content: center;
     }
+
+    @include tablets {
+      justify-content: center;
+    }
+
   }
   
   .skills-row__item {
