--- a/src/styles/blocks/user.pcss
+++ b/src/styles/blocks/user.pcss
@@ -13,6 +13,12 @@
     box-shadow: 0px 10px 24px 0 rgba(#000, .3);
     margin:  0 70px 60px 0; 
     flex-shrink: 0;
+
+    @include phones {
+      margin-right: 0 ;
+      margin-left: 30px;
+    }
+
   }
   
   .user__table {
