--- a/src/styles/blocks/skill.pcss
+++ b/src/styles/blocks/skill.pcss
@@ -12,12 +12,12 @@
   .skill__circle {
     fill: transparent;
     &--under {
-        stroke: #eaeaea;
-        stroke-width: 5px;
+        stroke: #413f3f;
+        stroke-width: 3px;
     }
     &--above {
         stroke: #d98b20;
-        stroke-width: 10px;
+        stroke-width: 6px;
         stroke-dasharray: 251;
         stroke-dashoffset: 100;
     }
