--- a/src/index.pug
+++ b/src/index.pug
@@ -1,4 +1,5 @@
 include ./mixins.pug
+include ./templates/entry.pug
 
 <!DOCTYPE html>
 html(lang="en")
@@ -11,6 +12,21 @@ html(lang="en")
     .wrapper
       .maincontent
         .welcome-section
+          section.parallax
+            .parallax__layer(data-speed="0.15")
+              +image("parallax/6.png", "parallax__image")
+            .parallax__layer(data-speed="0.20")
+              +image("parallax/5.png", "parallax__image")
+            .parallax__layer(data-speed="0.27")
+             +image("parallax/4.png", "parallax__image")
+            .parallax__layer(data-speed="0.33")
+              +image("parallax/3.png", "parallax__image")
+            .parallax__layer(data-speed="0.35")
+              +image("parallax/2.png", "parallax__image")
+            .parallax__layer(data-speed="0.37")
+              +image("parallax/1.png", "parallax__image")
+            .parallax__layer(data-speed="0.40")
+              +image("parallax/7.png", "parallax__image")
           section.hero
             .container.hero__container
               header.header.hero__header
@@ -40,96 +56,50 @@ html(lang="en")
                 .scroll-down__btn
           
           section.about 
-            .container
-              .about__columns
-                .about__user
-                  .user
-                    .user__avatar
-                      .user__avatar-wrapper
-                        +image("content/user.jpg", "user__avatar-pic")
-                      .user__about
-                        -
-                          var data = [
-                            ['Проживаю', 'Москва'],
-                            ['Возраст', '26'],
-                            ['Родился', '12.09.1993'],
-                          ];
-                        table.user__table
-                          each row in data
-                            tr
-                              td.user___table-title #{row[0]}
-                              td.user___table-content #{row[1]}
-                  .about__user-text
-                    .about__main-text-content
-                      h4.about__desc Привет, меня зовут
-                      h2.about__title Новиков Андрей
-                      .about__text-info
-                        p Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
-                    .about__ps
+              .container
+                .about__columns
+                  .about__user
+                    .user
+                      .user__avatar
+                        .user__avatar-wrapper
+                          +image("content/user.jpg", "user__avatar-pic")
+                        .user__about
+                          -
+                            var data = [
+                              ['Проживаю', 'Москва'],
+                              ['Возраст', '26'],
+                              ['Родился', '12.09.1993'],
+                            ];
+                          table.user__table
+                            each row in data
+                              tr
+                                td.user___table-title #{row[0]}
+                                td.user___table-content #{row[1]}
+                    .about__user-text
+                      .about__main-text-content
+                        h4.about__desc Привет, меня зовут
+                        h2.about__title Новиков Андрей
+                        .about__text-info
+                          p Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
+                      .about__ps
+                        p Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
+        .middle-section
+          section.values
+            .container.values__container
+              .values__wrapper
+                .values__title
+                  .values__title-container
+                    h3.values__title-text.section-title Чем я могу быть полезен
+                    .values__content
                       p Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
-
-        section.values
-          .container.values__container
-            .values__wrapper
-              .values__title
-                .values__title-container
-                  h3.values__title-text.section-title Чем я могу быть полезен
-                  .values__content
-                    p Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
-              .values__widget
-                .values__widget-container
-                  ul.skills
-                    - for (var i = 0; i < 2; i++)
-                      li.skills__item.skills-row
-                        - var skillRow = ["Front-end", "WorkFlow"]
-                          h4.skills-row__title #{skillRow[i]} 
-                          ul.skills-row__list
-                            - for (var j = 0; j < 4; j++)
-                              - var skillTitle = ["HTML5", "CSS3", "JavaScript", "Vue"]
-                              - var skillTitle2 = ["GIT", "Terminal", "Gulp", "Webpack"]
-                                li.skills-row__item 
-                                  .skill
-                                    svg(viewBox="0 0 100 100" preserveAspectRatio="none").skill__circle-shape
-                                      circle(r="40" cx="50" cy="50").skill__circle.skill__circle--under
-                                      circle(r="40" cx="50" cy="50" stroke="url(#gradient" transform="rotate(180 50 50)").skill__circle.skill__circle--above
-                                      linear-gradient(id="gradient" x1="0%" y1="0%" x2="100%" y2="0")
-                                        stop(offset="0%" stop-color="#5500f2")
-                                        stop(offset="100%" stop-color="#8f00ef")
-                                    .skill__title #{skillTitle[j]}
-        section.works
-          .container.works__container
-            h2.section-title.works__section-title Мои работы
-            .works__content
-              .works__left
-                .slider
-                  .slider__fillpic
-                    +image("content/work_boss.png", "slider__avatar-pic")
-                    +image("content/work_2.png", "slider__preview-pic")
-                  .slider__preview
-                    ul.previews
-                      - for (var i = 0; i < 3; i++)
-                        li.previews__item
-                          img.previews__pic
-                  .slider__buttons
-                    .slider-button
-                      button.slider-buttons__item.slider-buttons__item--slide--prev <
-                      button.slider-buttons__item.slider-buttons__item--slide--next.active >
-
-              .works__right
-                .works__tags
-                  - var tags = ['html', 'css', 'javascript']
-                  each tag in tags
-                    ul.tags
-                      li.tags__item #{tag}
-                .works__text
-                  h3.works__title Сайт школы образования
-                  .works__desc-text
-                    p Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
-                  a(href="").iconed-link
-                    .iconed-link__icon
-                      +icon('link', 'iconed-link-icon')
-                    .iconed-link__text Посмотреть сайт
-
+                .values__widget
+                  #skills-component
+                  
+          section.works
+            .container.works__container
+              h2.section-title.works__section-title Мои работы
+              .works__content
+                #slider-component
         section.contacts
             .container.contacts__container
               .contacts__about
@@ -185,31 +155,33 @@ html(lang="en")
                       input(type="submit" value="отправить").gradient-btn.form__submit
 
       footer.footer
-        .container.footer__container
-          .footer__copyright
-            .footer__copyright-col
-              .footer__copyright-year &copy; 2020
-            .footer__copyright-userinfo
-              .footer__copyright-name Новиков Андрей
-              .footer__data-text Личный сайт веб - разработчика
-          .footer__data
-            nav.menu.menu--color-white.footer__data-menu
-              ul.menu__list
-                each item in menu 
-                  li.menu__item
-                    a(href="#").menu__link #{item}
-            .footer__data-content
-              .footer__data-col
-                .footer__data-text
-                  p Этот сайт я сделал в рамках обучения в Школе онлайн образования Loftschool
-                .footer__data-socials
-                  ul.socials.socials--round-borders
-                    each item in socials
-                      li.socials__item
-                        a(href="#").socials__link
-                          +icon(`${item}`, 'socials__icon')
-              .footer__data-col
-                .text-quote
-                  .text-quote__text
-                    p Всегда пишите код так, будто сопровождать его будет склонный к насилию психопат, который знает где вы живете 
-                  .text-quote__author Martin Golding                          
+          .container.footer__container
+            .footer__copyright
+              .footer__copyright-col
+                .footer__copyright-year &copy; 2020
+              .footer__copyright-userinfo
+                .footer__copyright-name Новиков Андрей
+                .footer__data-text Личный сайт веб - разработчика
+            .footer__data
+              nav.menu.menu--color-white.footer__data-menu
+                ul.menu__list
+                  each item in menu 
+                    li.menu__item
+                      a(href="#").menu__link #{item}
+              .footer__data-content
+                .footer__data-col
+                  .footer__data-text
+                    p Этот сайт я сделал в рамках обучения в Школе онлайн образования Loftschool
+                  .footer__data-socials
+                    ul.socials.socials--round-borders
+                      each item in socials
+                        li.socials__item
+                          a(href="#").socials__link
+                            +icon(`${item}`, 'socials__icon')
+                .footer__data-col
+                  .text-quote
+                    .text-quote__text
+                      p Всегда пишите код так, будто сопровождать его будет склонный к насилию психопат, который знает где вы живете 
+                    .text-quote__author Martin Golding    
+
+
