--- a/src/styles/blocks/iconed.pcss
+++ b/src/styles/blocks/iconed.pcss
@@ -1,6 +1,5 @@
 .iconed-link {
     display: flex;
-    margin-top: 45px;
 
     @include tablets {
         justify-content: center;
@@ -13,12 +12,13 @@
 
 .iconed-link-icon {
     fill: #576ed2;
-    width: 16px;
-    height: 16px;
+    width: 18px;
+    height: 18px;
     margin-right: 20px;
 }
 
-.iconed-link__text {
+.iconed-link {
+    flex-flow: row-reverse;
     font-size: 18px;
     font-weight: bold;
     color: #576ed2;
