--- a/src/styles/blocks/tags.pcss
+++ b/src/styles/blocks/tags.pcss
@@ -1,21 +1,8 @@
-.tags {
-    position: relative;
-    width: 100px; 
-    height: 65px;
-    background: #f3f5f9;
-    border-radius: 100px;
-    margin-right: 10px;
 
-    &:last-child {
-        margin-right: 0;
-    }
-}
-
-.tags__item {
+.tag{
     font-size: 15px;
     font-weight: 700;
     opacity: 0.6;
-    position: absolute;
     position: absolute;
     top: 50%;
     left: 50%;
