--- a/src/styles/blocks/works.pcss
+++ b/src/styles/blocks/works.pcss
@@ -3,20 +3,20 @@
     background-color: #fff;
 }
 
-.works__content {
-    margin-top: 80px;
-    display: flex;
-    padding-bottom: 60px;
+// .works__content {
+//     margin-top: 80px;
+//     display: flex;
+//     padding-bottom: 60px;
 
-    @include phones {
-        padding-bottom: 0px;
-    }
+//     @include phones {
+//         padding-bottom: 0px;
+//     }
 
-    @include tablets {
-        flex-direction: column;
-        align-items: center;
-    }
-}
+//     @include tablets {
+//         flex-direction: column;
+//         align-items: center;
+//     }
+// }
 
 .works__container {
     color: $work-color;
@@ -27,87 +27,104 @@
 }
 
 .works__section-title {
-    padding-top: 200px;
+    margin-top: 200px;
 
     @include phones {
-        text-align: center;
-        margin-bottom: 30px;
+        margin-top: 50px;
     }
 
     @include tablets {
-        padding: 0;
+        margin-top: 50px;
     }
 }
 
-.works__left {
-    width: 60%;
+// .works__left {
+//     width: 60%;
 
-    @include tablets {
-        width: 86%;
-        margin-right: auto;
-    }
+//     @include tablets {
+//         width: 86%;
+//         margin-right: auto;
+//     }
 
-    @include phones {
-        width: 100%;
-    }
-}
+//     @include phones {
+//         width: 100%;
+//     }
+// }
 
-.works__right {
-    position: relative;
-    margin-left: 150px;
-    width: 40%;
+// .works__right {
+//     position: relative;
+//     margin-left: 150px;
+//     width: 40%;
 
-    &:before {
-        content: "2";
-        position: absolute;
-        left: -44%;
-        top: -25%;
-        opacity: 0.1;
-        font-size: 400px;
-        font-weight: 900;
+//     &:before {
+//         content: "2";
+//         position: absolute;
+//         left: -44%;
+//         top: -25%;
+//         opacity: 0.1;
+//         font-size: 400px;
+//         font-weight: 900;
         
-        @include tablets {
-            content: "2";
-            position: absolute;
-            top: -168%;
-            opacity: .1;
-            left: 90%;
-            font-size: 276px;
-            font-weight: 900;
-        }
-    }
+//         @include tablets {
+//             content: "2";
+//             position: absolute;
+//             top: -168%;
+//             opacity: .1;
+//             left: 90%;
+//             font-size: 276px;
+//             font-weight: 900;
+//         }
+//     }
 
-    @include tablets {
-        width: 80%;
-        text-align: center;
-        margin: 60px 0 0 0;
-    }
+//     @include tablets {
+//         width: 80%;
+//         text-align: center;
+//         margin: 60px 0 0 0;
+//     }
 
+//     @include phones {
+//         text-align: initial;
+//       }
+// }
+
+// .works__tags {
+//     display: flex;
+
+//     @include tablets {
+//         justify-content: center;
+//     }
+// }
+
+// .works__text {
+//     margin-top: 50px;
+// }
+
+// .works__title {
+//     font-weight: 800;
+//     font-size: 30px;
+// }
+
+
+
+
+
+
+.works__content {
+    padding-bottom: 60px;
     @include phones {
-        text-align: initial;
-      }
-}
-
-.works__tags {
-    display: flex;
-
-    @include tablets {
-        justify-content: center;
+      padding-bottom: 0px;
     }
-}
-
-.works__text {
-    margin-top: 50px;
-}
-
-.works__title {
-    font-weight: 800;
-    font-size: 30px;
-}
-
-.works__desc-text {
-    margin-top: 45px;
-    font-weight: 600;
-    font-size: 16px;
-    color: #ccc;
-}
+  }
+  
+  .works__container {
+    @include phones {
+      width: 100%;
+    }
+  }
+  
+  .works__section-title {
+    @include phones {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+  }
