--- a/src/styles/blocks/welcome-section.pcss
+++ b/src/styles/blocks/welcome-section.pcss
@@ -1,8 +1,8 @@
 .welcome-section {
     position: relative;
     // height: 100vh;
-    // background: url('~images/content/bg_1.jpg');
-    // background-position: 100%;
-    // background-size: cover;
-    // background-repeat: no-repeat;
+    background: url('~images/content/bg_1.jpg');
+    background-position: 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
