--- a/src/templates/components/reviews.pug
+++ b/src/templates/components/reviews.pug
@@ -1,41 +1,42 @@
 script(type="text/x-template")#slider-hooper
 
-    hooper(:itemsToShow="2" :itemsToSlide="2")
-        slide 1
-            li.reviews__content-item-text
-                p Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 4,5 месяца только самых тяжелых испытаний и бессонных ночей!
-                a(href="#").reviews__social.teacher-social
-                    .teacher-social-pic
-                    +image("content/Kovalchuk.png", "teacher-social-icon")
-                    .teacher-social-content
-                    h4.teacher-social-title Ковальчук Дмитрий
-                    p Основатель Loftschool
-        slide 2
-            li.reviews__content-item-text
-                p Этот код выдержит любые испытания. Только пожалуйста, не загружайте сайт на слишком старых браузерах. 
-                a(href="#").reviews__social.teacher-social
-                    .teacher-social-pic
-                    +image("content/Sibancev.png", "teacher-social-icon")
-                    .teacher-social-content
-                    h4.teacher-social-title Владимир Сабанцев
-                    p Преподаватель
-        slide 3
-            li.reviews__content-item-text
-                p Этот код выдержит любые испытания. Только пожалуйста, не загружайте сайт на слишком старых браузерах. 
-                a(href="#").reviews__social.teacher-social
-                    .teacher-social-pic
-                    +image("content/Sibancev.png", "teacher-social-icon")
-                    .teacher-social-content
-                    h4.teacher-social-title Владимир Сабанцев
-                    p Преподаватель
-        slide 4
-            li.reviews__content-item-text
-                p Этот код выдержит любые испытания. Только пожалуйста, не загружайте сайт на слишком старых браузерах. 
-                a(href="#").reviews__social.teacher-social
-                    .teacher-social-pic
-                    +image("content/Sibancev.png", "teacher-social-icon")
-                    .teacher-social-content
-                    h4.teacher-social-title Владимир Сабанцев
-                    p Преподаватель
+    hooper(:itemsToShow="2" :itemsToSlide="2" @slide="handleSlide" )
+        hooper-navigation(slot="hooper-addons")
+        slide(v-for="review in reviews" :key="review.id" @slide="$emit('slide', $event)")
+            slideReviews(:currentReviews="currentReviews" :reviews="reviews" @slide="$emit('slide', $event)")
+            p {{currentReviews.text}}
+            a(href="#").reviews__social.teacher-social
+                .teacher-social-pic
+                img(:src="currentReviews.pic").teacher-social-icon
+                .teacher-social-content
+                h4.teacher-social-title {{currentReviews.name}}
+                p {{currentReviews.occ}}
+        //- slide 2
+        //-     li.reviews__content-item-text
+        //-         p Этот код выдержит любые испытания. Только пожалуйста, не загружайте сайт на слишком старых браузерах. 
+        //-         a(href="#").reviews__social.teacher-social
+        //-             .teacher-social-pic
+        //-             +image("content/Sibancev.png", "teacher-social-icon")
+        //-             .teacher-social-content
+        //-             h4.teacher-social-title Владимир Сабанцев
+        //-             p Преподаватель
+        //- slide 3
+        //-     li.reviews__content-item-text
+        //-         p Этот код выдержит любые испытания. Только пожалуйста, не загружайте сайт на слишком старых браузерах. 
+        //-         a(href="#").reviews__social.teacher-social
+        //-             .teacher-social-pic
+        //-             +image("content/Sibancev.png", "teacher-social-icon")
+        //-             .teacher-social-content
+        //-             h4.teacher-social-title Владимир Сабанцев
+        //-             p Преподаватель
+        //- slide 4
+        //-     li.reviews__content-item-text
+        //-         p Этот код выдержит любые испытания. Только пожалуйста, не загружайте сайт на слишком старых браузерах. 
+        //-         a(href="#").reviews__social.teacher-social
+        //-             .teacher-social-pic
+        //-             +image("content/Sibancev.png", "teacher-social-icon")
+        //-             .teacher-social-content
+        //-             h4.teacher-social-title Владимир Сабанцев
+        //-             p Преподаватель
    
 
