--- a/src/styles/blocks/teacher.pcss
+++ b/src/styles/blocks/teacher.pcss
@@ -12,7 +12,7 @@
 
     &-pic {
         // width: 100%;
-        padding-right: 30px;
+        // padding-right: 30px;
 
         @include phones {
             padding-right: 15px;
@@ -24,4 +24,9 @@
         font-weight: 700;
     }
 
+    &-icon {
+        @include phones {
+            width: 10%;
+        }
+    }
 }
