--- a/src/styles/blocks/reviews.pcss
+++ b/src/styles/blocks/reviews.pcss
@@ -71,8 +71,12 @@
 }
 
 .reviews__content {
-  overflow: hidden;
+  // overflow: hidden;
   margin-bottom: 200px;
+
+  @include phones {
+    margin-bottom: 50px;
+  }
 }
 
 .reviews__content-wrapper {
@@ -88,6 +92,7 @@
     width: 100%;
     margin-left: 0;
   }
+
 }
 
 .reviews__content-item {
@@ -97,6 +102,7 @@
     width: 100%;
 
     @include phones {
+      margin-top: 60px;
         margin-right: 0;
         width: 100%;
     }
