--- a/src/styles/blocks/works-slider.pcss
+++ b/src/styles/blocks/works-slider.pcss
@@ -112,7 +112,8 @@
   
     @include phones {
       top: initial;
-      bottom: 0;
+      right: -21px;
+      bottom: 22px;
     }
   }
   
@@ -131,7 +132,7 @@
       position: absolute;
       top: 50%;
       left: 50%;
-      transform: translate(-50%, -50%) rotate(-90deg);
+      transform: translate(-50%, -50%) rotate(90deg);
       transition: opacity .3s, margin-top .3s;
       opacity: .3;
     }
@@ -142,7 +143,7 @@
     }
     &_prev {
       &:before {
-        transform: translate(-50%, -50%) rotate(-270deg);
+        transform: translate(-50%, -50%) rotate(-90deg);
       }
       &:active {
         &:before {
