исправил замечания наставника

--- a/src/index.pug
+++ b/src/index.pug
@@ -50,10 +50,12 @@ html(lang="en")
                   .burgerMenu
               .hero__content
                 .userinfo
-                  .userinfo__title Личный сайт веб разработчика
-                  h1.userinfo__name Андрей Новиков
+                  .userinfo__title Личный сайт <br> веб разработчика
+                  h1.userinfo__name 
+                    span Андрей 
+                    span Новиков
               a.hero__downbutton
-                .scroll-down__btn
+                .scroll-down__btn Скролл
           
           section.about 
               .container
