--- a/src/styles/blocks/header.pcss
+++ b/src/styles/blocks/header.pcss
@@ -5,6 +5,12 @@
     align-items: center;
 }
 
+.logo {
+    &:hover {
+        color: #ff9a00;
+    }
+}
+
 .header__menu {
     display: flex;
     justify-content:center;
