--- a/src/styles/blocks/teacher.pcss
+++ b/src/styles/blocks/teacher.pcss
@@ -26,7 +26,8 @@
 
     &-icon {
         @include phones {
-            width: 10%;
+            width: 20%;
+            height: 20%;
         }
     }
 }
