--- a/src/styles/blocks/hero.pcss
+++ b/src/styles/blocks/hero.pcss
@@ -15,7 +15,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0 24%;
+    // padding: 0 24%;
   
     @include desktop {
       padding: 0 10%;
