--- a/src/styles/blocks/skill.pcss
+++ b/src/styles/blocks/skill.pcss
@@ -7,6 +7,11 @@
       width: 135px;
       height: 135px;
     }
+
+    @include phones {
+        width: 100px;
+        height: 100px;
+      }
   }
   
   .skill__circle {
