--- a/src/styles/blocks/userinfo.pcss
+++ b/src/styles/blocks/userinfo.pcss
@@ -1,6 +1,8 @@
 .userinfo {
     display: flex;
     text-align: center;
+    align-items: center;
+    justify-content: center;
    
     @include desktop {
       display: flex;
@@ -14,10 +16,11 @@
   }
   
   .userinfo__title {
+    text-align: right;
     font-size: 18px;
     color: rgba($text-color, .4);
     font-weight: 600;
-    margin-bottom: 20px;
+    margin-right: 30px;
     
     @include desktop {
       text-align: right;
@@ -40,9 +43,15 @@
   }
   
   .userinfo__name {
+    display: flex;
+    flex-direction: column;
     font-weight: 800;
     font-size: 72px;
     line-height: 1;
+
+    &span {
+      display: block;
+    }
   
     @include phones {
       font-size: 36px;
