--- a/src/styles/blocks/values.pcss
+++ b/src/styles/blocks/values.pcss
@@ -1,18 +1,19 @@
 .values {
     background: url('~images/content/bg_2.jpg');
     height: 100vh;
+    position: relative;
 }
 
 .values {
     // margin-bottom: 114px;
   
     @include phones {
-      margin-bottom: 75px;
+      // margin-bottom: 75px;
     }
   }
   
   .values__container {
-    position: relative;
+    
     
     @include tablets {
       // padding-bottom: 350px;
@@ -22,7 +23,7 @@
       position: absolute;
       background: url('~images/content/arm.png') left bottom / contain no-repeat;
       display: block;
-      bottom: -23%;
+      bottom: -13%;
       height: 79%;
       width: 69%;
       left: -3%;
@@ -30,14 +31,15 @@
       @include tablets {
         bottom: 0;
         left: 14%;
-        top: 69.3%;
+        top: 54.4%;
         height: 28.75rem;
         transform: rotate(-90deg);
       }
   
       @include phones {
-        left: -8%;
-        width: 78%;
+        left: 10%;
+        width: 62%;
+        top: 60.8%;
       }
     }
   }
@@ -50,6 +52,10 @@
     margin-bottom: 82px;
     display: flex;
     justify-content: center;
+
+    @include tablets {
+      margin-bottom: 42px;
+    }
   }
   
   .values__title-container {
@@ -97,5 +103,9 @@
     width: 68%;
     @include tablets {
       width: 95%;
+    }
+
+    @include tablets {
+      padding:0 20px;
     }
   }
