--- a/src/index.pug
+++ b/src/index.pug
@@ -130,7 +130,7 @@ html(lang="en")
                           .form-block__container
                             +icon(`${item[0]}`, 'form-block__icon') 
                             .form-block__field
-                              input(type="text" placeholder=item[2]).form-block__input
+                              input(type="text" placeholder=item[2] required).form-block__input
                     .form__row.form__row--extra-margin
                       label.form-block(data-title="Сообщение к письму")
                         .form-block__container.form-block__container_align_top
